Fixed an issue where dropdown menus would be cut off if a ticket has no articles.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.PageLayout.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.PageLayout.css
@@ -24,6 +24,7 @@
      * @note    force own Block Formatting Context for nested floats
      */
     overflow: hidden;
+    min-height: 500px;
 }
 
 .LayoutFixedSidebar > .SidebarColumn {
